--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "dependencies": {
     "body-parser": "~1.16.0",
     "connect-mongo": "^1.3.2",
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.3",
     "debug": "~2.6.0",
     "ejs": "^2.5.5",
     "express": "~4.14.1",
+    "express-session": "^1.15.2",
     "jade": "~1.11.0",
     "method-override": "^2.3.7",
     "mongoose": "^4.8.5",
